<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CampusSaathi</string>

    <string name="owner_verification">Owner Verification</string>
    <string name="owner_verification_subtitle">
        Please verify your identity and property to manage rooms, PGs, or hotels.
    </string>

    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="same_number">Same number as registered</string>

    <string name="your_role">Your Role</string>
    <string name="role_owner">Owner</string>
    <string name="role_caretaker">Caretaker</string>
    <string name="role_manager">Manager</string>

    <string name="id_proof">ID Proof</string>
    <string name="id_proof_hint">Upload Aadhaar card, PAN card, or college ID</string>
    <string name="upload_id">Upload ID Proof</string>
    <string name="id_safe">Your ID is safe and will not be shared with students.</string>
    <string-array name="filter_days">
        <item>Last 7 Days</item>
        <item>Last 30 Days</item>
        <item>Last 90 Days</item>
        <item>Last 6 Months</item>
        <item>Last 1 Year</item>
    </string-array>

    <string-array name="first_dropdown">
        <item>Select Services</item>
        <item>police Station</item>
        <item>Hospitals</item>
        <item>Bus Station</item>
        <item>Railways Station</item>
        <item>Restaurants</item>
        <item>Grocery Stores</item>
    </string-array>

    <string-array name="second_dropdown">
        <item>Select Service</item>
        <item>Mess</item>
        <item>Room/Pg</item>
        <item>Tuition</item>
        <item>Stationary Store</item>
        <item>Medical Store</item>
        <item>Gym</item>
        <item>Street Food</item>
        <item>Others</item>
    </string-array>

    <string-array name="filter_services">
        <item>All Services</item>
        <item>Room / PG</item>
        <item>Mess</item>
        <item>Tuition</item>
    </string-array>

    <string name="property_proof">Property Proof</string>
    <string name="electricity_bill">Electricity bill</string>
    <string name="rent_agreement">Rent agreement</string>
    <string name="hotel_letter">Hotel approval letter</string>
    <string name="upload_property">Upload Property Proof</string>
    <string name="upload_any">Upload any one document</string>

    <string name="confirm_info">I confirm the information provided is correct</string>
    <string name="submit_verification">SUBMIT FOR VERIFICATION</string>

    <string name="owner_dashboard">Owner Dashboard</string>

    <string name="admin_dashboard">Admin Dashboard</string>

    <string name="total_listings_count">5</string>
    <string name="total_listings">Total Listings</string>

    <string name="active_requests_count">8</string>
    <string name="active_requests">Active Requests</string>

    <string name="listing_views_count">375</string>
    <string name="listing_views">Listing Views</string>

    <string name="action_required_count">2</string>
    <string name="action_required">Action Required</string>

    <string name="add_new_listing">Add New Listing</string>
    <string name="manage_listing">Manage Listing</string>
    <string name="view_requests">View Requests</string>

    <string name="my_listings">My Listings</string>
    <string name="view_all_listings">View All Listings</string>

    <string name="listing_1">Shivaji Girls PG  ₹8,000 / month  (Pending)</string>
    <string name="listing_2">Shivaji Girls PG  2-Shared Room  (Accepted)</string>
    <string name="listing_3">Shivaji Girls PG  3-Sharing Room  (Rejected)</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="menu">Menu</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="header_title">Home</string>


    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="saved">Saved</string>
    <string name="help_support">Help and Support</string>
    <string name="logout">Logout</string>
    <string name="call">Call</string>

    <string name="search_services">Search Services</string>
    <string name="sample_name">Owner Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="volunteer_title">Become a CampusSaathi Volunteer</string>
    <string name="volunteer_subtitle">Help your campus community by contributing valuable information and assisting fellow students.</string>
    <string name="apply_volunteer">Apply as Volunteer</string>
    <string name="volunteer_responsibility">Volunteer Responsibilities</string>
    <string name="point1">• Suggest new and accurate places</string>
    <string name="point2">• Moderate and verify information</string>
    <string name="point3">• Respond to student queries</string>
    <string name="volunteer_banner">Volunteer banner</string>
    <string name="back">Back</string>
    <string name="waiting">Waiting illustration</string>


</resources>
