<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- LOGO -->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/campus_logo" />

        <!-- TITLE -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner_verification"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/owner_text_primary"
            android:layout_gravity="center"
            android:layout_marginTop="12dp" />

        <!-- SUBTITLE -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/owner_verification_subtitle"
            android:textSize="14sp"
            android:textColor="@color/owner_text_secondary"
            android:gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="24dp" />

        <!-- ================= COMMON DETAILS ================= -->
        <LinearLayout
            android:id="@+id/layoutCommonVerification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textStyle="bold"
                android:textColor="@color/owner_text_primary" />

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:textColor="@color/owner_text_primary"
                android:textColorHint="@color/owner_text_secondary"
                android:background="@android:drawable/edit_text"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textStyle="bold"
                android:textColor="@color/owner_text_primary" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:inputType="phone"
                android:textColor="@color/owner_text_primary"
                android:textColorHint="@color/owner_text_secondary"
                android:background="@android:drawable/edit_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/same_number"
                android:textSize="12sp"
                android:textColor="@color/owner_text_secondary"
                android:layout_marginBottom="16dp" />


        </LinearLayout>
        <!-- Upload ID Proof Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_bg"
            android:padding="8dp"
            android:gravity="center_vertical">

            <!-- Icon -->
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_image"
                app:tint="@color/owner_text_secondary"
                android:layout_marginEnd="8dp"/>

            <!-- Text -->
            <TextView
                android:id="@+id/txtSelectedFile"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Upload ID Proof"
                android:textColor="@color/owner_text_secondary"/>

            <!-- Browse Button -->
            <Button
                android:id="@+id/btnBrowseProof"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="BROWSE"
                android:textColor="@color/owner_primary"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <!-- Image Preview -->
        <ImageView
            android:id="@+id/imgProofPreview"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:visibility="gone"/>


        <!-- ================= ROOM / PG ================= -->
        <LinearLayout
            android:id="@+id/layoutRoomVerification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_proof"
                android:textStyle="bold"
                android:textColor="@color/owner_text_primary" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/owner_text_primary"
                    android:text="@string/electricity_bill" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/owner_text_primary"
                    android:text="@string/rent_agreement" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/owner_text_primary"
                    android:text="@string/hotel_letter" />
            </RadioGroup>


        </LinearLayout>

        <!-- ================= MESS ================= -->
        <LinearLayout
            android:id="@+id/layoutMessVerification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mess Proof"
                android:textStyle="bold"
                android:textColor="@color/owner_text_primary" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/owner_text_primary"
                    android:text="FSSAI License" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/owner_text_primary"
                    android:text="Shop Act License" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/owner_text_primary"
                    android:text="Kitchen Rent Agreement" />
            </RadioGroup>


        </LinearLayout>

        <!-- ================= TUITION ================= -->
        <LinearLayout
            android:id="@+id/layoutTuitionVerification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Qualification Proof"
                android:textStyle="bold"
                android:textColor="@color/owner_text_primary" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/owner_text_primary"
                    android:text="Degree Certificate" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/owner_text_primary"
                    android:text="Experience Letter" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/owner_text_primary"
                    android:text="Institute Registration" />
            </RadioGroup>


        </LinearLayout>

        <!-- CHECKBOX & SUBMIT -->
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_info"
            android:textColor="@color/owner_text_primary"
            android:layout_marginBottom="20dp" />


        <Button
            android:id="@+id/btnSubmitVerification"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/submit_verification"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/owner_primary" />

    </LinearLayout>
</ScrollView>